[package]
name = "laminated"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = "2.7.0"
itertools = "0.11.0"
three-d = { version = "0.16.2", features = ["egui-gui"] }
winit = "0.29.3"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
eyre = "0.6.9"